--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </svg>
 
     <div class="follow">Follow me on</div>
-    <div class="twitter-handle">_cosycute</div>
+    <div class="twitter-handle">cosycute_</div>
   </div>
   <!-- Scripts -->
   <script src="./src/js/client.js"></script>
